--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,52 @@
-#logo {
-    
-}
-/* Always set the map height explicitly to define the size of the div
- * element that contains the map. */
-#map {
-    height: 100%;
-}
-/* Optional: Makes the sample page fill the window. */
 html, body {
-    height: 90%;
     margin: 0;
     padding: 0;
+    font-family: 'Pridi', serif;
+    font-size: 16px;
 }
+body {
+    position: relative;
+    height: 100vh;
+}
+#header {
+    height: 8%;
+    padding: 10px;
+}
+    #logo {
+        text-align: center;
+    }
+#content {
+    height: 82%;
+}
+    #map { height: 100%;}
+#footer {}
+    #progress-bar {
+        padding: 10px 10px 40px;
+    }
+        #my-progress-bar {
+            background: #ccc;
+            border-radius: 3px;
+            height: 22px;
+            width: 330px;
+            padding: 0px;
+            padding: 3px;
+            float: right;
+        }
+
+        #my-progress-bar:after {
+            content: '';
+            display: block;
+            background: #3c97d3; /*url("../image/bg_progress01.jpg")*/;
+            width: 50%;
+            height: 100%;
+            border-radius: 3px;
+        }
+        #progress-bar .label {
+            float: right;
+            margin: 0;
+            margin-right:  15px;
+        }
+    #comment-section {
+        padding-top:  10px;
+        text-align: center;
+    }
