hard-coded contents + messed up progress bar
ไม่อ่านไฟล์แล้ว ยัดเนื้อหาลง string ไปเลย แล้วก็ใส่โปรเกรสบาร์ที่แก้ง่าย
ๆ ลงไป แต่ยังพังอยู่

--- a/css/style.css
+++ b/css/style.css
@@ -33,14 +33,14 @@ body {
             float: right;
         }
 
-        #my-progress-bar:after {
-            content: '';
-            display: block;
-            background: #3c97d3; /*url("../image/bg_progress01.jpg")*/;
-            width: 50%;
-            height: 100%;
-            border-radius: 3px;
-        }
+        /*#my-progress-bar:after {*/
+            /*content: '';*/
+            /*display: block;*/
+            /*background: #3c97d3; !*url("../image/bg_progress01.jpg")*!;*/
+            /*width: 50%;*/
+            /*height: 100%;*/
+            /*border-radius: 3px;*/
+        /*}*/
         #progress-bar .label {
             float: right;
             margin: 0;
