--- a/css/style.css
+++ b/css/style.css
@@ -72,3 +72,62 @@ p {
         padding-top:  10px;
         text-align: center;
     }
+/*Map Pop up*/
+.gm-style-iw { overflow: visible !important; }
+.gm-style-iw .pop_title {
+   font-family: 'Pridi', serif;
+   font-size: 22px;
+   font-weight: 400;
+   padding-bottom: 5px;
+   color: #333;
+   margin-bottom: 10px;
+   border-radius: 2px 2px 0 0; /* In accordance with the rounding of the default infowindow corners. */
+   border-bottom: 1px solid #ff0;
+}
+.gm-style-iw .pop_content {
+    display: table;
+    margin-bottom: 20px;
+}
+.gm-style-iw .pop_img,
+.gm-style-iw .pop_txt {
+    display: table-cell;
+    vertical-align: top;
+}
+.gm-style-iw .pop_img {
+
+}
+.gm-style-iw .pop_txt {
+    padding: 0 10px;
+    max-height: 300px;
+    font-family: 'Pridi', serif;
+    overflow-y: scroll;
+    font-size: 16px;
+}
+.gm-style-iw .pop_check {
+    text-align: right;
+    font-family: 'Pridi', serif;
+    font-size: 16px;
+}
+    .gm-style-iw .pop_check input {
+        width: 20px;
+        height: 20px;
+        display: inline-block;
+        vertical-align: middle;
+    }
+.gm-style-iw .pop_next {
+    position: absolute;
+    top:  50%;
+    right: -60px;
+    width: 40px;
+    height: 40px;
+    margin-top: -20px;
+    text-align: center;
+    cursor: pointer;
+    opacity: 0.5;
+}
+    .gm-style-iw .pop_next img {
+        height: 100%;
+    }
+.gm-style-iw .pop_next:hover{
+    opacity: 0.7;
+}
