--- a/css/style.css
+++ b/css/style.css
@@ -116,18 +116,53 @@ p {
     }
 .gm-style-iw .pop_next {
     position: absolute;
-    top:  50%;
-    right: -60px;
-    width: 40px;
-    height: 40px;
-    margin-top: -20px;
+    top:  0;
+    right: -74px;
+    width: 30px;
+    padding: 0 15px;
+    height: 100%;
+    margin-top: 0;
     text-align: center;
     cursor: pointer;
     opacity: 0.5;
+        /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#333333+0,7db9e8+100&1+0,0+100 */
+    background: -moz-linear-gradient(left,  rgba(51,51,51,1) 0%, rgba(125,185,232,0) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(left,  rgba(51,51,51,1) 0%,rgba(125,185,232,0) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right,  rgba(51,51,51,1) 0%,rgba(125,185,232,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#333333', endColorstr='#007db9e8',GradientType=1 ); /* IE6-9 */
 }
     .gm-style-iw .pop_next img {
-        height: 100%;
+        width: 100%;
+        position: relative;
+        top: 50%;
+        margin-top: -32px;
     }
 .gm-style-iw .pop_next:hover{
-    opacity: 0.7;
+    opacity: 0.9;
+}
+.gm-style-iw .pop_prev {
+    position: absolute;
+    top:  0;
+    left: -74px;
+    width: 30px;
+    padding: 0 15px;
+    height: 100%;
+    margin-top: 0;
+    text-align: center;
+    cursor: pointer;
+    opacity: 0.5;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#7db9e8+0,333333+100&0+0,1+100 */
+    background: -moz-linear-gradient(left,  rgba(125,185,232,0) 0%, rgba(51,51,51,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(left,  rgba(125,185,232,0) 0%,rgba(51,51,51,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right,  rgba(125,185,232,0) 0%,rgba(51,51,51,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#007db9e8', endColorstr='#333333',GradientType=1 ); /* IE6-9 */
+}
+    .gm-style-iw .pop_prev img {
+        width: 100%;
+        position: relative;
+        top: 50%;
+        margin-top: -32px;
+    }
+.gm-style-iw .pop_prev:hover{
+    opacity: 0.9;
 }
