--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,27 +1,33 @@
-.jumbotron {
-  background: #532F8C;
-  color: white;
-  padding-bottom: 80px; }
-  .jumbotron .btn-primary {
-    background: #845ac7;
-    border-color: #845ac7; }
-    .jumbotron .btn-primary:hover {
-      background: #7646c1; }
-  .jumbotron p {
-    color: #d9ccee;
-    max-width: 75%;
-    margin: 1em auto 2em; }
-  .navbar + .jumbotron {
-    margin-top: -20px; }
-  .jumbotron .lang-logo {
-    display: block;
-    background: #B01302;
-    border-radius: 50%;
-    overflow: hidden;
-    width: 100px;
-    height: 100px;
-    margin: auto;
-    border: 2px solid white; }
-    .jumbotron .lang-logo img {
-      max-width: 100%; }
-
+html, body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Pridi', serif;
+    font-size: 16px;
+}
+body {
+    position: relative;
+    height: 100vh;
+}
+div {
+  display: block;
+}
+.container {
+  padding: 10px;
+}
+.story {
+  margin: 10px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+.image {
+  margin-top: 5px;
+  width: 200px;
+}
+.image > img {
+  max-width: 200px;
+  max-height: 200px;
+}
+.content .text {
+  padding: 15px;
+}
