--- a/views/partials/temp_header.ejs
+++ b/views/partials/temp_header.ejs
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" type="images/x-icon" href="images/ico.png"/>
     <link href="https://fonts.googleapis.com/css?family=Pridi:400,600" rel="stylesheet">
     <script type="text/javascript" src="javascripts/initMap.js"></script>
-    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css"/>
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBm253oNfhS4tZCPLNpR8x_butc4CLjNwo&callback=readThai"></script>
     <script>
