--- a/android/TKMS/app/src/main/res/layout/activity_description.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_description.xml
@@ -7,15 +7,17 @@
     <TextView
         android:id="@+id/title_text"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:textAlignment="center"
         android:textStyle="bold"
-        android:layout_weight="0.1"
+        android:textSize="30dp"
         />
     <ImageView
         android:id="@+id/imageView"
         android:layout_gravity="center"
         android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
         android:layout_height="0dp"
         android:layout_weight="0.4"
         />
@@ -29,6 +31,10 @@
         <TextView
             android:id="@+id/description_text"
             android:layout_width="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:textSize="20dp"
             android:layout_height="0dp" />
     </ScrollView>
 
