--- a/android/TKMS/app/src/main/res/layout/activity_description.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_description.xml
@@ -13,23 +13,32 @@
         android:onClick="onVideoClick"
         />
 
-    <TextView
-        android:id="@+id/title_text"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:textSize="30dp"
-        />
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_gravity="center"
-        android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
         android:layout_height="0dp"
-        android:layout_weight="0.4"
-        />
+        android:layout_weight="0.3"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/title_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textAlignment="center"
+            android:textSize="30dp"
+            android:textStyle="bold"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_margin="10dp"
+            />
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_height="0dp"
+            android:layout_weight="0.4"
+            />
+    </RelativeLayout>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -40,9 +49,7 @@
         <TextView
             android:id="@+id/description_text"
             android:layout_width="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_margin="10dp"
             android:textSize="20dp"
             android:layout_height="0dp" />
     </ScrollView>
