--- a/android/TKMS/app/src/main/res/layout/activity_description.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_description.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Button"
+        android:visibility="gone"
         android:onClick="onVideoClick"
         />
 
@@ -35,8 +36,7 @@
             android:layout_gravity="center"
             android:layout_width="match_parent"
             android:layout_marginTop="10dp"
-            android:layout_height="0dp"
-            android:layout_weight="0.4"
+            android:layout_height="match_parent"
             />
     </RelativeLayout>
 
