--- a/android/TKMS/app/src/main/res/layout/activity_maps.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_maps.xml
@@ -15,32 +15,43 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.8"
+        android:layout_weight="1"
         tools:context=".MapsActivity" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        >
+        <include layout="@layout/below_infowindow" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.2"
         android:orientation="horizontal"
+        android:visibility="gone"
         android:weightSum="1"
         >
 
-        <Button
-            android:id="@+id/left_button"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5"
-            android:onClick="OnNavigateButtonClick"
-            android:background="@drawable/ic_chevron_left_black_24dp" />
+        <!--<Button-->
+            <!--android:id="@+id/left_button"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="0.5"-->
+            <!--android:onClick="OnNavigateButtonClick"-->
+            <!--android:visibility="gone"-->
+            <!--android:background="@drawable/ic_chevron_left_black_24dp" />-->
 
-        <Button
-            android:id="@+id/right_button"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5"
-            android:onClick="OnNavigateButtonClick"
-            android:background="@drawable/ic_chevron_right_black_24dp" />
+        <!--<Button-->
+            <!--android:id="@+id/right_button"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="0.5"-->
+            <!--android:onClick="OnNavigateButtonClick"-->
+            <!--android:visibility="gone"-->
+            <!--android:background="@drawable/ic_chevron_right_black_24dp" />-->
     </LinearLayout>
 </LinearLayout>
 
