--- a/android/TKMS/app/src/main/res/layout/activity_description.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_description.xml
@@ -20,6 +20,7 @@
         android:layout_weight="0.3"
         android:orientation="vertical">
         <TextView
+            android:layout_below="@id/imageView"
             android:id="@+id/title_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
