--- a/android/TKMS/app/src/main/res/layout/below_infowindow.xml
+++ b/android/TKMS/app/src/main/res/layout/below_infowindow.xml
@@ -13,6 +13,7 @@
         android:layout_height="0dp"
         android:layout_weight="2"
         android:orientation="horizontal"
+        android:visibility="gone"
         android:weightSum="1"
         >
         <ImageView
