--- a/android/TKMS/app/src/main/res/layout/activity_description_itemlist.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_description_itemlist.xml
@@ -13,11 +13,30 @@
         android:orientation="vertical"
         >
 
-        <ImageView
-            android:id="@+id/place_image"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/place_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+            <TextView
+                android:id="@+id/place_name_overlay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textColor="@android:color/white"
+                />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                />
+        </RelativeLayout>
+
 
         <TextView
             android:layout_width="match_parent"
