--- a/android/TKMS/app/src/main/res/values/colors.xml
+++ b/android/TKMS/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="heart_pink">#EC7370</color>
+    <color name="heart_grey">#bcbcbc</color>
 </resources>
