--- a/android/TKMS/app/src/main/res/layout/activity_description_itemlist.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_description_itemlist.xml
@@ -29,11 +29,14 @@
                 android:textColor="@android:color/white"
                 />
             <ImageView
+                android:id="@+id/heart_item_page"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
+                android:src="@drawable/grey_heart"
+                android:visibility="gone"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
+                android:onClick="onHeartClick"
                 />
         </RelativeLayout>
 
