--- a/android/TKMS/app/src/main/res/layout/activity_description_itemlist.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_description_itemlist.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    xmlns:ProgressWheel="http://schemas.android.com/apk/res-auto"
     >
 
     <LinearLayout
@@ -12,6 +14,22 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
+
+        <com.todddavies.components.progressbar.ProgressWheel
+            android:id="@+id/pw_spinner"
+            android:background="@drawable/pink_heart"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true"
+            ProgressWheel:pwRimColor="#330097D6"
+            ProgressWheel:pwBarLength="60dp"
+            ProgressWheel:pwBarColor="#0097D6"
+            ProgressWheel:pwBarWidth="5dp"
+            ProgressWheel:pwRimWidth="2dp"/>
+        <!--ProgressWheel:pwText="Progress"-->
+        <!--ProgressWheel:pwTextColor="#222"-->
+        <!--ProgressWheel:pwTextSize="14sp"-->
+
 
         <RelativeLayout
             android:layout_width="match_parent"
