--- a/android/TKMS/app/src/main/res/layout/below_infowindow.xml
+++ b/android/TKMS/app/src/main/res/layout/below_infowindow.xml
@@ -47,6 +47,7 @@
     </LinearLayout>
 
     <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
