--- a/android/TKMS/app/src/main/res/values-v21/styles.xml
+++ b/android/TKMS/app/src/main/res/values-v21/styles.xml
@@ -1,11 +1,14 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
 
-    <!-- Base application theme. -->
+
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="android:textColorPrimary">@color/dark_grey</item>
+        <item name="android:textColorSecondary">@color/dark_grey</item>
+        <item name="android:navigationBarColor">@color/dark_grey</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
 </resources>
