--- a/android/TKMS/app/src/main/res/values/colors.xml
+++ b/android/TKMS/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#FFDA00</color>
+    <color name="colorPrimaryDark">#FFC200</color>
     <color name="colorAccent">#FF4081</color>
     <color name="heart_pink">#EC7370</color>
     <color name="heart_grey">#bcbcbc</color>
+    <color name="dark_grey">#333333</color>
 </resources>
