--- a/android/TKMS/app/src/main/res/values-v21/styles.xml
+++ b/android/TKMS/app/src/main/res/values-v21/styles.xml
@@ -2,13 +2,22 @@
 <resources>
 
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="android:textColorPrimary">@color/dark_grey</item>
         <item name="android:textColorSecondary">@color/dark_grey</item>
         <item name="android:navigationBarColor">@color/dark_grey</item>
+        <item name="android:actionBarStyle">@style/AppTheme.ActionBarStyle</item>
         <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="AppTheme.ActionBar.TitleTextStyle" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/dark_grey</item>
+    </style>
+
+    <style name="AppTheme.ActionBarStyle" parent="@android:style/Widget.Holo.Light.ActionBar">
+        <item name="android:titleTextStyle">@color/dark_grey</item>
     </style>
 </resources>
