--- a/android/TKMS/app/src/main/res/values/styles.xml
+++ b/android/TKMS/app/src/main/res/values/styles.xml
@@ -5,7 +5,14 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="android:textColorPrimary">@color/dark_grey</item>
+        <item name="android:textColorSecondary">@color/dark_grey</item>
+        <item name="android:navigationBarColor">@color/dark_grey</item>
         <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="AppTheme.ActionBar.TitleTextStyle" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/dark_grey</item>
     </style>
 
 </resources>
