--- a/android/TKMS/app/src/main/res/layout/below_infowindow.xml
+++ b/android/TKMS/app/src/main/res/layout/below_infowindow.xml
@@ -15,22 +15,24 @@
         android:orientation="horizontal"
         android:visibility="gone"
         android:weightSum="1"
+        android:background="@drawable/text_line_hamepage"
         >
         <ImageView
             android:id="@+id/left_button"
             android:src="@mipmap/left_arrow_button"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="20dp"
             android:onClick="OnNavigateButtonClick"
             android:layout_weight="0.1"
+            android:paddingTop="10px"
+            android:paddingBottom="10px"
             />
 
         <TextView
             android:id="@+id/below_info_header_text"
             android:layout_width="0dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="5dp"
-            android:textSize="20dp"
+            android:textSize="15dp"
+            android:layout_marginLeft="10px"
             android:layout_height="match_parent"
             android:layout_weight="0.8"
             android:onClick="OnBelowWindowClick"
@@ -43,6 +45,8 @@
             android:layout_height="match_parent"
             android:onClick="OnNavigateButtonClick"
             android:layout_weight="0.1"
+            android:paddingTop="10px"
+            android:paddingBottom="10px"
             />
     </LinearLayout>
 
@@ -51,7 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        app:itemBackground="?attr/colorPrimary"
+        app:itemBackground="@color/colorBG"
         app:itemIconTint="@drawable/selector_bottombar_item"
         app:itemTextColor="@drawable/selector_bottombar_item"
         app:menu="@menu/bottombar_menu"/>
