--- a/android/TKMS/app/src/main/res/layout/activity_description.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_description.xml
@@ -1,58 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:scrollbarStyle="insideOverlay"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="10dp"
     android:weightSum="1"
     >
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        android:visibility="gone"
-        android:onClick="onVideoClick"
-        />
-
+    <!--<Button-->
+        <!--android:id="@+id/button"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Button"-->
+        <!--android:visibility="gone"-->
+        <!--android:onClick="onVideoClick"-->
+        <!--/>-->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.3"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
+        <ImageView
+            android:id="@+id/imageView"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
         <TextView
             android:layout_below="@id/imageView"
             android:id="@+id/title_text"
+            android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:textAlignment="center"
-            android:textSize="30dp"
+            android:textSize="20dp"
+            android:text="TEST"
             android:textStyle="bold"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_margin="10dp"
-            />
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_gravity="center"
-            android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
-            android:layout_height="match_parent"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             />
     </RelativeLayout>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.5"
-        android:scrollbarStyle="insideOverlay">
-
         <TextView
             android:id="@+id/description_text"
             android:layout_width="match_parent"
             android:layout_margin="10dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:textSize="20dp"
-            android:layout_height="0dp" />
-    </ScrollView>
+            android:layout_height="wrap_content"
+            />
 
 </LinearLayout>
+</ScrollView>
