--- a/android/TKMS/app/src/main/res/menu/bottombar_menu.xml
+++ b/android/TKMS/app/src/main/res/menu/bottombar_menu.xml
@@ -4,26 +4,20 @@
 
     <item
         android:id="@+id/bottombaritem_mymap"
-        android:icon="@mipmap/menu_1_button"
+        android:icon="@drawable/menu1"
         android:title="My map"
         app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/bottombaritem_history"
-        android:icon="@mipmap/menu_2_button"
+        android:icon="@drawable/menu2"
         android:title="History"
         app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/bottombaritem_profile"
-        android:icon="@mipmap/menu_3_button"
+        android:icon="@drawable/menu3"
         android:title="Profile"
-        app:showAsAction="ifRoom"/>
-
-    <item
-        android:id="@+id/bottombaritem_settings"
-        android:icon="@mipmap/menu_4_button"
-        android:title="Settings"
         app:showAsAction="ifRoom"/>
 
 </menu>
