--- a/android/TKMS/app/src/main/res/layout/activity_maps.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_maps.xml
@@ -9,7 +9,12 @@
     xmlns:ProgressWheel="http://schemas.android.com/apk/res-auto"
     >
 
-
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/mapActivity_layout"
+    android:visibility="visible"
+    >
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
@@ -38,7 +43,6 @@
         ProgressWheel:pwRimWidth="5dp" />
 
     <ImageView
-
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_alignParentLeft="true"
@@ -47,6 +51,14 @@
         android:layout_marginTop="10dp"
         android:onClick="OnMapSelectionClick"
         android:src="@mipmap/mymap_icon01" />
+</RelativeLayout>
+    <include layout="@layout/activity_history"
+        android:id="@+id/history_activity_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        >
+    </include>
 
     <LinearLayout
         android:background="@android:color/white"
@@ -54,6 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         >
+
 
         <include layout="@layout/below_infowindow" />
     </LinearLayout>
