--- a/android/TKMS/app/src/main/res/layout/halfview.xml
+++ b/android/TKMS/app/src/main/res/layout/halfview.xml
@@ -1,26 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="1"
+    android:layout_height="wrap_content"
+    android:layout_marginHorizontal="5sp"
+    android:background="@color/dark_grey"
     >
 
 
     <ImageView
-        android:background="@color/dark_grey"
+
         android:id="@+id/halfview_image"
         android:layout_gravity="center_horizontal"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.5"
+        android:adjustViewBounds="true"
+        android:layout_height="wrap_content"
         />
 
     <TextView
         android:id="@+id/map_title_text"
         android:layout_width="wrap_content"
+        android:textAlignment="center"
         android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content"
         android:text="TEXT"
-        android:textSize="20sp" />
+        android:textColor="@android:color/white"
+        android:textSize="16sp" />
 
 </LinearLayout>
