--- a/android/TKMS/app/src/main/res/layout/marker_inactive.xml
+++ b/android/TKMS/app/src/main/res/layout/marker_inactive.xml
@@ -10,16 +10,16 @@
     <LinearLayout
         android:id="@+id/overall_marker"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
 
         >
 
         <!--<LinearLayout-->
-            <!--android:id="@+id/left_background"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:orientation="horizontal" />-->
+        <!--android:id="@+id/left_background"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:orientation="horizontal" />-->
 
         <LinearLayout
             android:id="@+id/marker_image"
